--- a/index.css
+++ b/index.css
@@ -190,13 +190,15 @@ h3{
         margin-top: 20px;
     }
     .text h1{
+        margin-top: -30px;
         font-size: 25px;
     }
     .text h2{
+        margin-left: 15px;
         font-size: 50px;
     }
     .text h3{
-        margin-left: 40px;
+        margin-left: 50px;
     }
     .about h3{
         margin-left: 50px;
