--- a/index.css
+++ b/index.css
@@ -89,11 +89,11 @@ nav ul li a{
     font-size: 30px;
     transition: transform 0.2s ease;
 }
-.menu-icon:active,.menu-icon i:active{
+.menu-icon:active,.menu-icon i:active,#resume:active,.profile:active{
     transform: scale(0.96);
 }
 .text{
-    margin-top: -200px;
+    margin-top: -250px;
     font-family: "Roboto Condensed", sans-serif;
     margin-left: 60px;
     display: flex;
@@ -101,14 +101,14 @@ nav ul li a{
 }
 .prfimg img{
     margin-top: 50px;
-    height:350px;
-    width: 350px;
-    margin-left: 73vw;
-  
+    height:45vh;
+    width: 25vw;
+    margin-left: 70%;
 }
 h1{
     color: aliceblue;
     font-size: 60px;
+    margin-top: -25px;
 }
 h2{
     color: blue;
@@ -116,6 +116,50 @@ h2{
 }
 h3{
     font-size: 35px;
+}
+.buttons{
+    font-family: "Roboto Condensed", sans-serif;
+    margin-top: 20px;
+    display: flex;
+    gap: 30px;
+}
+#resume{
+    background-color: rgb(17, 23, 36);
+    color: blue;
+    font-size: 22px;
+    padding: 5px;
+    border: 3px solid blue;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+    margin-left: 60px;
+    align-items: center;
+}
+#resume i{
+    justify-content: center;
+    font-size: 22px;
+}
+#resume:hover{
+    background-color: blue;
+    color: black;
+}
+.i{
+    display: flex;
+    gap: 15px;
+}
+.profile{
+    padding: 5px;
+    font-size: 20px;
+    background-color: transparent;
+    border: 2px solid ;
+    border-radius: 50%;
+    color: blue;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+}
+.profile:hover{
+    background-color: blue;
+    color: black;
 }
 .about{
     display: flex;
@@ -143,12 +187,42 @@ h3{
         font-size: 20px;
     }
 }
+/*  */
 @media (max-width:686px){
     #navList{
         font-size: 16px;
     }
 }
+/*  */
 @media (max-width:625px) {
+    .name h2{
+        margin-left: 0px;
+    }
+    .prfimg img{
+        margin-top: 50px;
+        height:300px;
+        width: 300px;
+        margin-left: 150px;
+    }
+    .text{
+        margin-top: 20px;
+    }
+    .text h1{
+        margin-top: -30px;
+        font-size: 50px;
+    }
+    .text h2{
+        margin-left: 0px;
+    }
+    .text h3{
+        margin-left: 0px;
+    }
+    #resume{
+        margin-left: 60px;
+    }
+    .about h3{
+        margin-left: 0px;
+    }
     #darkmode{
         display: inline-block;
         margin-left: 30vw;
@@ -176,7 +250,35 @@ h3{
         transition: all 0.5s;
     }
 }
-@media (max-width:361px){
+/*  */
+@media (max-width:566px){
+    .text h1{
+        margin-top: -30px;
+        font-size: 45px;
+    }
+    .buttons{
+        display: block;
+     }
+     #resume{
+        margin-left: 60px;
+     }
+     .i{
+        margin-top: 10px;
+        margin-left: 60px;
+     }
+}
+/*  */
+@media (max-width:450px)  {
+    .prfimg img{
+        margin-top: 50px;
+        height:300px;
+        width: 250px;
+        margin-left: 60px;
+    }
+}
+/*  */
+
+@media (max-width:431px){
     .name h2{
         margin-left: 0px;
     }
@@ -184,21 +286,64 @@ h3{
         margin-top: 50px;
         height:200px;
         width: 200px;
-        margin-left: 80px;
+        margin-left: 130px;
     }
     .text{
         margin-top: 20px;
     }
     .text h1{
         margin-top: -30px;
-        font-size: 25px;
+        font-size: 33px;
     }
     .text h2{
-        margin-left: 15px;
+        margin-left: 70px;
         font-size: 50px;
     }
     .text h3{
-        margin-left: 50px;
+        margin-left: 90px;
+    }
+    .about h3{
+        margin-left: 100px;
+    }
+    .about p{
+        margin-left: -30px;
+        font-size: 15px;
+     }
+     .buttons{
+        display: block;
+     }
+     #resume{
+        margin-left:125px;
+     }
+     .i{
+        margin-top: 10px;
+        margin-left: 125px;
+     }
+} 
+@media (max-width:376px){
+    .name h2{
+        margin-left: 0px;
+    }
+    .prfimg img{
+        margin-top: 50px;
+        height:200px;
+        width: 200px;
+        margin-left: 100px;
+    }
+    .text{
+        margin-top: 20px;
+    }
+    .text h1{
+        margin-top: -30px;
+        font-size: 30px;
+        margin-left: -10px;
+    }
+    .text h2{
+        margin-left: 25px;
+        font-size: 50px;
+    }
+    .text h3{
+        margin-left: 65px;
     }
     .about h3{
         margin-left: 50px;
@@ -207,4 +352,67 @@ h3{
         margin-left: -30px;
         font-size: 15px;
      }
+     .buttons{
+        display: block;
+     }
+     #resume{
+        margin-left:110px;
+     }
+     .i{
+        margin-top: 10px;
+        margin-left: 110px;
+     }
 } 
+/*  */
+@media (max-width:361px){
+    .name h2{
+        margin-left: 0px;
+    }
+    .prfimg img{
+        margin-top: 50px;
+        height:200px;
+        width: 200px;
+        margin-left: 90px;
+    }
+    .text{
+        margin-top: 20px;
+    }
+    .text h1{
+        margin-top: -30px;
+        font-size: 30px;
+        margin-left: -28px;
+    }
+    .text h2{
+        margin-left: 25px;
+        font-size: 50px;
+    }
+    .text h3{
+        margin-left: 60px;
+    }
+    .about h3{
+        margin-left: 45px;
+    }
+    .about p{
+        margin-left: -30px;
+        font-size: 15px;
+     }
+     .buttons{
+        display: block;
+     }
+     #resume{
+        margin-left:90px;
+     }
+     .i{
+        margin-top: 10px;
+        margin-left: 90px;
+     }
+} 
+
+@media (max-width:394px) {
+    .text h1{
+        font-size: 30px;
+    }
+    .about h3{
+        margin-left: 60px;
+    }
+}
