--- a/index.css
+++ b/index.css
@@ -108,7 +108,7 @@ nav ul li a{
 h1{
     color: aliceblue;
     font-size: 60px;
-    margin-top: -25px;
+    margin-top: -55px;
 }
 h2{
     color: blue;
@@ -176,10 +176,21 @@ h3{
 }
 .about p{
     font-family: "Roboto Condensed", sans-serif;
-    font-size: 22px;
+    font-size: 21.5px;
     display: flex;
 }
-
+.skilheader{
+    font-size: 40px;
+    color: blue;
+    margin-left: 60px;
+    text-decoration: underline;
+}
+.p-3{
+    background-color: rgba(40, 44, 75, 0.329);
+    color: aliceblue;
+    border-radius: 15px;
+    font-size: 18px;
+}
 /*  */
 
 @media (max-width:770px){
@@ -279,6 +290,9 @@ h3{
 /*  */
 
 @media (max-width:431px){
+    .skilheader{
+        margin-left: 180px;
+    }
     .name h2{
         margin-left: 0px;
     }
@@ -303,7 +317,7 @@ h3{
         margin-left: 90px;
     }
     .about h3{
-        margin-left: 100px;
+        margin-left: 90px;
     }
     .about p{
         margin-left: -30px;
@@ -313,13 +327,22 @@ h3{
         display: block;
      }
      #resume{
-        margin-left:125px;
+        margin-left:145px;
      }
      .i{
         margin-top: 10px;
-        margin-left: 125px;
+        margin-left: 140px;
      }
 } 
+/*  */
+@media (max-width:394px) {
+    .text h1{
+        font-size: 30px;
+    }
+    .about h3{
+        margin-left: 60px;
+    }
+}
 @media (max-width:376px){
     .name h2{
         margin-left: 0px;
@@ -346,7 +369,7 @@ h3{
         margin-left: 65px;
     }
     .about h3{
-        margin-left: 50px;
+        margin-left: 55px;
     }
     .about p{
         margin-left: -30px;
@@ -362,56 +385,7 @@ h3{
         margin-top: 10px;
         margin-left: 110px;
      }
-} 
-/*  */
-@media (max-width:394px) {
-    .text h1{
-        font-size: 30px;
-    }
-    .about h3{
-        margin-left: 60px;
-    }
-}
-@media (max-width:361px){
-    .name h2{
-        margin-left: 0px;
-    }
-    .prfimg img{
-        margin-top: 50px;
-        height:200px;
-        width: 200px;
-        margin-left: 90px;
-    }
-    .text{
-        margin-top: 20px;
-    }
-    .text h1{
-        margin-top: -30px;
-        font-size: 30px;
-        margin-left: -28px;
-    }
-    .text h2{
-        margin-left: 25px;
-        font-size: 50px;
-    }
-    .text h3{
-        margin-left: 60px;
-    }
-    .about h3{
-        margin-left: 40px;
-    }
-    .about p{
-        margin-left: -30px;
-        font-size: 15px;
-     }
-     .buttons{
-        display: block;
-     }
-     #resume{
-        margin-left:90px;
-     }
-     .i{
-        margin-top: 10px;
-        margin-left: 90px;
+     .skilheader{
+        margin-left: 140px;
      }
 } 
