--- a/projects.css
+++ b/projects.css
@@ -3,13 +3,9 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
 }
 
 body{
-    height: 100%;
-    width: 100%;
     background-color: rgb(17, 23, 36);
 }
 
@@ -21,25 +17,31 @@ nav{
     background-color: rgb(17, 23, 36);
     font-family: "Roboto Condensed", sans-serif;
     position: relative;
-    height: 70px;
+    height: 80px;
     color: aliceblue;
 }
-.name{
+.name h2{
+    font-family: "Roboto Condensed", sans-serif;
+    margin-left:35px;
+    margin-top: 20px;
     color: blue;
-    font-size: 1.5rem;
+    font-size: 2rem;
+    align-items: center;
+    text-align: center;
 }
 #ullist{
+    margin-top: 20px;
     display: flex;
     gap: 30px;
 }
 #darkmode{
+    margin-top: 20px;
     background-color: transparent;
     color: aliceblue ;
     border: none;
     font-size: 1.8rem;
     align-items: center;
     cursor: pointer;
-    margin-right: 20px;
 }
 #darkmode:hover{
     color: yellow;
@@ -77,6 +79,7 @@ nav ul li a{
 
 .menu-icon{
     display: none;
+    margin-top: 20px;
     align-items: center;
     cursor: pointer;
     transition: transform 0.2s ease;
@@ -86,20 +89,140 @@ nav ul li a{
     font-size: 30px;
     transition: transform 0.2s ease;
 }
-.menu-icon:active,.menu-icon i:active{
+.menu-icon:active,.menu-icon i:active,#resume:active,.profile:active{
     transform: scale(0.96);
 }
+.text{
+    margin-top: -250px;
+    font-family: "Roboto Condensed", sans-serif;
+    margin-left: 60px;
+    display: flex;
+    color: aliceblue;
+}
+.prfimg img{
+    margin-top: 50px;
+    height:45vh;
+    width: 25vw;
+    margin-left: 70%;
+}
+h1{
+    color: aliceblue;
+    font-size: 60px;
+    margin-top: -25px;
+}
+h2{
+    color: blue;
+    font-size: 70px;
+}
+h3{
+    font-size: 35px;
+}
+.buttons{
+    font-family: "Roboto Condensed", sans-serif;
+    margin-top: 20px;
+    display: flex;
+    gap: 30px;
+}
+#resume{
+    background-color: rgb(17, 23, 36);
+    color: blue;
+    font-size: 22px;
+    padding: 5px;
+    border: 3px solid blue;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+    margin-left: 60px;
+    align-items: center;
+}
+#resume i{
+    justify-content: center;
+    font-size: 22px;
+}
+#resume:hover{
+    background-color: blue;
+    color: black;
+}
+.i{
+    display: flex;
+    gap: 15px;
+}
+.profile{
+    padding: 5px;
+    font-size: 20px;
+    background-color: transparent;
+    border: 2px solid ;
+    border-radius: 50%;
+    color: blue;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+}
+.profile:hover{
+    background-color: blue;
+    color: black;
+}
+.about{
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+    margin-left: 60px;
+    color: aliceblue;
+}
+.about h3{
+    font-family: "Roboto Condensed", sans-serif;
+    color: blue;
+    font-size: 40px;
+    text-decoration: underline;
+}
+.about p{
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 22px;
+    display: flex;
+}
+
+/*  */
+
 @media (max-width:770px){
     #navList{
         font-size: 20px;
     }
 }
+/*  */
 @media (max-width:686px){
     #navList{
         font-size: 16px;
     }
 }
+/*  */
 @media (max-width:625px) {
+    .name h2{
+        margin-left: 0px;
+    }
+    .prfimg img{
+        margin-top: 50px;
+        height:300px;
+        width: 300px;
+        margin-left: 150px;
+    }
+    .text{
+        margin-top: 20px;
+    }
+    .text h1{
+        margin-top: -30px;
+        font-size: 50px;
+    }
+    .text h2{
+        margin-left: 0px;
+    }
+    .text h3{
+        margin-left: 0px;
+    }
+    #resume{
+        margin-left: 60px;
+    }
+    .about h3{
+        margin-left: 0px;
+    }
     #darkmode{
         display: inline-block;
         margin-left: 30vw;
@@ -127,3 +250,168 @@ nav ul li a{
         transition: all 0.5s;
     }
 }
+/*  */
+@media (max-width:566px){
+    .text h1{
+        margin-top: -30px;
+        font-size: 45px;
+    }
+    .buttons{
+        display: block;
+     }
+     #resume{
+        margin-left: 60px;
+     }
+     .i{
+        margin-top: 10px;
+        margin-left: 60px;
+     }
+}
+/*  */
+@media (max-width:450px)  {
+    .prfimg img{
+        margin-top: 50px;
+        height:300px;
+        width: 250px;
+        margin-left: 60px;
+    }
+}
+/*  */
+
+@media (max-width:431px){
+    .name h2{
+        margin-left: 0px;
+    }
+    .prfimg img{
+        margin-top: 50px;
+        height:200px;
+        width: 200px;
+        margin-left: 130px;
+    }
+    .text{
+        margin-top: 20px;
+    }
+    .text h1{
+        margin-top: -30px;
+        font-size: 33px;
+    }
+    .text h2{
+        margin-left: 70px;
+        font-size: 50px;
+    }
+    .text h3{
+        margin-left: 90px;
+    }
+    .about h3{
+        margin-left: 100px;
+    }
+    .about p{
+        margin-left: -30px;
+        font-size: 15px;
+     }
+     .buttons{
+        display: block;
+     }
+     #resume{
+        margin-left:125px;
+     }
+     .i{
+        margin-top: 10px;
+        margin-left: 125px;
+     }
+} 
+@media (max-width:376px){
+    .name h2{
+        margin-left: 0px;
+    }
+    .prfimg img{
+        margin-top: 50px;
+        height:200px;
+        width: 200px;
+        margin-left: 100px;
+    }
+    .text{
+        margin-top: 20px;
+    }
+    .text h1{
+        margin-top: -30px;
+        font-size: 30px;
+        margin-left: -10px;
+    }
+    .text h2{
+        margin-left: 25px;
+        font-size: 50px;
+    }
+    .text h3{
+        margin-left: 65px;
+    }
+    .about h3{
+        margin-left: 50px;
+    }
+    .about p{
+        margin-left: -30px;
+        font-size: 15px;
+     }
+     .buttons{
+        display: block;
+     }
+     #resume{
+        margin-left:110px;
+     }
+     .i{
+        margin-top: 10px;
+        margin-left: 110px;
+     }
+} 
+/*  */
+@media (max-width:394px) {
+    .text h1{
+        font-size: 30px;
+    }
+    .about h3{
+        margin-left: 60px;
+    }
+}
+@media (max-width:361px){
+    .name h2{
+        margin-left: 0px;
+    }
+    .prfimg img{
+        margin-top: 50px;
+        height:200px;
+        width: 200px;
+        margin-left: 90px;
+    }
+    .text{
+        margin-top: 20px;
+    }
+    .text h1{
+        margin-top: -30px;
+        font-size: 30px;
+        margin-left: -28px;
+    }
+    .text h2{
+        margin-left: 25px;
+        font-size: 50px;
+    }
+    .text h3{
+        margin-left: 60px;
+    }
+    .about h3{
+        margin-left: 40px;
+    }
+    .about p{
+        margin-left: -30px;
+        font-size: 15px;
+     }
+     .buttons{
+        display: block;
+     }
+     #resume{
+        margin-left:90px;
+     }
+     .i{
+        margin-top: 10px;
+        margin-left: 90px;
+     }
+} 
